chore: move domain entities to the same pkg
