# internal/controller/bookings.go
@@ -6,16 +6,17 @@ import (
 	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
 	"github.com/truc9/goal/internal/booking"
+	"github.com/truc9/goal/internal/entity"
 	"github.com/truc9/goal/internal/utils/httpcontext"
 )
 
 type BookingController struct {
-	s booking.BookingService
+	bookingSv booking.BookingService
 }
 
 func NewBookingController(s booking.BookingService) BookingController {
 	return BookingController{
-		s: s,
+		bookingSv: s,
 	}
 }
 
@@ -25,17 +26,17 @@ func NewBookingController(s booking.BookingService) BookingController {
 //	@Tags			bookings
 //	@Accept			json
 //	@Produce		json
-//	@Param			model body		booking.Booking true "Submit Booking"
-//	@Success		200	{object}	booking.Booking
+//	@Param			model body		entity.Booking true "Submit Booking"
+//	@Success		200	{object}	entity.Booking
 //	@Router			/api/bookings [post]
 func (ctrl *BookingController) SubmitBooking(c echo.Context) (err error) {
 	userId := httpcontext.GetUserId(c)
-	model := &booking.Booking{}
+	model := &entity.Booking{}
 	if err := c.Bind(model); err != nil {
 		return c.JSON(http.StatusBadRequest, err)
 	}
 
-	booking, _ := ctrl.s.CreateBooking(userId, model)
+	booking, _ := ctrl.bookingSv.CreateBooking(userId, model)
 
 	return c.JSON(http.StatusCreated, booking)
 }
@@ -49,9 +50,9 @@ func (ctrl *BookingController) SubmitBooking(c echo.Context) (err error) {
 //	@Param			bookingId path int true "Booking ID"
 //	@Success		200
 //	@Router			/api/bookings/{bookingId} [delete]
-func (h BookingController) DeleteBooking(c echo.Context) (err error) {
+func (ctrl BookingController) DeleteBooking(c echo.Context) (err error) {
 	bookingId, _ := uuid.Parse(c.Param("bookingId"))
-	h.s.DeleteBooking(bookingId)
+	ctrl.bookingSv.DeleteBooking(bookingId)
 	return c.JSON(http.StatusOK, nil)
 }
 
@@ -61,11 +62,11 @@ func (h BookingController) DeleteBooking(c echo.Context) (err error) {
 //	@Tags			bookings
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{array}	booking.GrouppedUserBooking
+//	@Success		200	{array}	entity.GrouppedUserBooking
 //	@Router			/api/bookings [get]
-func (h BookingController) GetAllBookings(c echo.Context) (err error) {
+func (ctrl BookingController) GetAllBookings(c echo.Context) (err error) {
 	periodId, _ := uuid.Parse(c.Param("bookingPeriodId"))
-	bookings := h.s.GetBookingsByPeriod(periodId)
+	bookings := ctrl.bookingSv.GetBookingsByPeriod(periodId)
 	return c.JSON(http.StatusOK, bookings)
 }
 
@@ -76,11 +77,11 @@ func (h BookingController) GetAllBookings(c echo.Context) (err error) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			bookingPeriodId path int true "Booking Period ID"
-//	@Success		200	{array}	booking.Booking
+//	@Success		200	{array}	entity.Booking
 //	@Router			/api/bookings/{bookingPeriodId} [get]
 func (h BookingController) GetMyBookings(c echo.Context) (err error) {
 	userId := httpcontext.GetUserId(c)
 	bookingPeriodId, _ := uuid.Parse(c.Param("bookingPeriodId"))
-	bookings := h.s.GetMyBookings(userId, bookingPeriodId)
+	bookings := h.bookingSv.GetMyBookings(userId, bookingPeriodId)
 	return c.JSON(http.StatusOK, bookings)
 }
